--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "firebase": "9.20.0",
+    "firebase": "^9.20.0",
     "nanoid": "^3.1.28",
     "react": "17.0.2",
     "react-dom": "17.0.2",
